--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "main.js",
   "scripts": {
     "start:local": "cross-env APP_ENV=dev nodemon main.js",
-    "eslint": "npx eslint './**'",
-    "eslint-fix": "eslint ./ --fix",
+    "start:dev": "cross-env APP_ENV=dev node main.js",
     "test": "APP_ENV=test jest --runInBand --silent --coverage ",
     "testWithCoverage": "APP_ENV=test jest --runInBand --silent --coverage "
   },
@@ -18,14 +17,9 @@
       "/node_modules/",
       "/main.js",
       "/swagger.js"
-    ],
-    "testResultsProcessor": "jest-sonar-reporter"
-  },
-  "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    ]
   },
   "author": "Sudarshan Dhatrak",
-  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "compression": "^1.7.4",
@@ -45,12 +39,8 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "eslint": "^8.25.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
     "jest": "^26.6.3",
     "json-loader": "^0.5.7",
-    "lint-staged": "^11.1.2",
     "nodemon": "^2.0.19",
     "supertest": "^4.0.2"
   }
