--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "scripts": {
     "start:local": "cross-env APP_ENV=dev nodemon main.js",
     "start:dev": "cross-env APP_ENV=dev node main.js",
-    "test": "APP_ENV=test jest --runInBand --silent --coverage ",
-    "testWithCoverage": "APP_ENV=test jest --runInBand --silent --coverage "
+    "test": " cross-env  APP_ENV=test jest --runInBand --silent --coverage ",
+    "testWithCoverage": " cross-env APP_ENV=test jest --runInBand --silent --coverage "
   },
   "jest": {
     "testEnvironment": "node",
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
     "verbose": true,
     "coveragePathIgnorePatterns": [
       "/node_modules/",
@@ -38,6 +41,8 @@
     "winston-loggly-bulk": "^3.2.1"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-import-assertions": "^7.23.3",
+    "@babel/preset-env": "^7.23.7",
     "cross-env": "^7.0.3",
     "jest": "^26.6.3",
     "json-loader": "^0.5.7",
