--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-ATLAS_DNS = mongodb+srv://sudarshan:sudarshan@sudarshancluster.kjkdx.mongodb.net/wallet?retryWrites=true&w=majority
+ATLAS_DNS = mongodb+srv://user:password@sudarshancluster.kjkdx.mongodb.net/wallet?retryWrites=true&w=majority
+#For local mongodb service
+#ATLAS_DNS = mongodb://localhost:27017/wallet
+
 PORT=3011
